--- a/cxconsts.html
+++ b/cxconsts.html
@@ -1961,6 +1961,8 @@ function main() {
     title="fullflag = &quot;\xE2\x9A\x91&quot;"><wbr />fullflag<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#enterkey"
     title="enterkey = &quot;\xE2\x86\xB5&quot;"><wbr />enterkey<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#sigma"
+    title="sigma = &quot;\xCE\xA3&quot;"><wbr />sigma<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#check"
     title="check = &quot;\xE2\x9C\x93&quot;"><wbr />check<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#xmark"
@@ -2088,6 +2090,10 @@ function main() {
        &quot;\xF0\x9F\x83\x9D&quot;, &quot;\xF0\x9F\x82\xAE&quot;, &quot;\xF0\x9F\x82\xBE&quot;,
        &quot;\xF0\x9F\x83\x8E&quot;, &quot;\xF0\x9F\x83\x9E&quot;, &quot;\xF0\x9F\x83\x8F&quot;,
        &quot;\xF0\x9F\x83\x9F&quot;]"><wbr />cards<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#kotakp"
+    title="kotakp = &quot;\xF0\x9F\x82\xA0&quot;"><wbr />kotakp<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#kotakk"
+    title="kotakk = &quot;\xF0\x9F\x82\xBF&quot;"><wbr />kotakk<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#rxCards"
     title="rxCards = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,
          27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49,
@@ -3680,6 +3686,11 @@ reset colors
 
 
 </dd>
+<dt id="sigma"><a name="sigma"></a><pre><span class="Identifier">sigma</span> <span class="Other">=</span> <span class="StringLit">&quot;\xCE\xA3&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
 <dt id="check"><a name="check"></a><pre><span class="Identifier">check</span> <span class="Other">=</span> <span class="StringLit">&quot;\xE2\x9C\x93&quot;</span></pre></dt>
 <dd>
 
@@ -3903,6 +3914,16 @@ reset colors
 
 
 </dd>
+<dt id="kotakp"><a name="kotakp"></a><pre><span class="Identifier">kotakp</span> <span class="Other">=</span> <span class="StringLit">&quot;\xF0\x9F\x82\xA0&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="kotakk"><a name="kotakk"></a><pre><span class="Identifier">kotakk</span> <span class="Other">=</span> <span class="StringLit">&quot;\xF0\x9F\x82\xBF&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
 <dt id="rxCards"><a name="rxCards"></a><pre><span class="Identifier">rxCards</span> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">0</span><span class="Other">,</span> <span class="DecNumber">1</span><span class="Other">,</span> <span class="DecNumber">2</span><span class="Other">,</span> <span class="DecNumber">3</span><span class="Other">,</span> <span class="DecNumber">4</span><span class="Other">,</span> <span class="DecNumber">5</span><span class="Other">,</span> <span class="DecNumber">6</span><span class="Other">,</span> <span class="DecNumber">7</span><span class="Other">,</span> <span class="DecNumber">8</span><span class="Other">,</span> <span class="DecNumber">9</span><span class="Other">,</span> <span class="DecNumber">10</span><span class="Other">,</span> <span class="DecNumber">11</span><span class="Other">,</span> <span class="DecNumber">12</span><span class="Other">,</span> <span class="DecNumber">13</span><span class="Other">,</span> <span class="DecNumber">14</span><span class="Other">,</span> <span class="DecNumber">15</span><span class="Other">,</span> <span class="DecNumber">16</span><span class="Other">,</span> <span class="DecNumber">17</span><span class="Other">,</span> <span class="DecNumber">18</span><span class="Other">,</span> <span class="DecNumber">19</span><span class="Other">,</span> <span class="DecNumber">20</span><span class="Other">,</span> <span class="DecNumber">21</span><span class="Other">,</span> <span class="DecNumber">22</span><span class="Other">,</span> <span class="DecNumber">23</span><span class="Other">,</span> <span class="DecNumber">24</span><span class="Other">,</span> <span class="DecNumber">25</span><span class="Other">,</span> <span class="DecNumber">26</span><span class="Other">,</span>
          <span class="DecNumber">27</span><span class="Other">,</span> <span class="DecNumber">28</span><span class="Other">,</span> <span class="DecNumber">29</span><span class="Other">,</span> <span class="DecNumber">30</span><span class="Other">,</span> <span class="DecNumber">31</span><span class="Other">,</span> <span class="DecNumber">32</span><span class="Other">,</span> <span class="DecNumber">33</span><span class="Other">,</span> <span class="DecNumber">34</span><span class="Other">,</span> <span class="DecNumber">35</span><span class="Other">,</span> <span class="DecNumber">36</span><span class="Other">,</span> <span class="DecNumber">37</span><span class="Other">,</span> <span class="DecNumber">38</span><span class="Other">,</span> <span class="DecNumber">39</span><span class="Other">,</span> <span class="DecNumber">40</span><span class="Other">,</span> <span class="DecNumber">41</span><span class="Other">,</span> <span class="DecNumber">42</span><span class="Other">,</span> <span class="DecNumber">43</span><span class="Other">,</span> <span class="DecNumber">44</span><span class="Other">,</span> <span class="DecNumber">45</span><span class="Other">,</span> <span class="DecNumber">46</span><span class="Other">,</span> <span class="DecNumber">47</span><span class="Other">,</span> <span class="DecNumber">48</span><span class="Other">,</span> <span class="DecNumber">49</span><span class="Other">,</span>
          <span class="DecNumber">50</span><span class="Other">,</span> <span class="DecNumber">51</span><span class="Other">,</span> <span class="DecNumber">52</span><span class="Other">,</span> <span class="DecNumber">53</span><span class="Other">,</span> <span class="DecNumber">54</span><span class="Other">,</span> <span class="DecNumber">55</span><span class="Other">,</span> <span class="DecNumber">56</span><span class="Other">,</span> <span class="DecNumber">57</span><span class="Other">]</span></pre></dt>
@@ -3942,7 +3963,7 @@ index into colorNames
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-11-10 11:25:35 UTC</small>
+        <small>Made with Nim. Generated: 2017-11-13 08:37:55 UTC</small>
       </div>
     </div>
   </div>
