--- a/cxconsts.html
+++ b/cxconsts.html
@@ -2111,6 +2111,8 @@ function main() {
     title="rxPastelCol = [0, 1, 2, 3, 4, 5, 6]"><wbr />rx<wbr />Pastel<wbr />Col<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#wideDot"
     title="wideDot = &quot;\xE2\x9A\xAB &quot;"><wbr />wide<wbr />Dot<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#iso_8601_aws"
+    title="iso_8601_aws = &quot;yyyyMMdd\&#x27;T\&#x27;HHmmss\&#x27;Z\&#x27;&quot;"><wbr />iso_<wbr />8601_<wbr />aws<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -3953,6 +3955,11 @@ index into colorNames
 
 
 </dd>
+<dt id="iso_8601_aws"><a name="iso_8601_aws"></a><pre><span class="Identifier">iso_8601_aws</span> <span class="Other">=</span> <span class="StringLit">&quot;yyyyMMdd\'T\'HHmmss\'Z\'&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
 
 </dl></div>
 
@@ -3963,7 +3970,7 @@ index into colorNames
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-11-13 08:37:55 UTC</small>
+        <small>Made with Nim. Generated: 2017-11-22 21:45:48 UTC</small>
       </div>
     </div>
   </div>
