--- a/cx.html
+++ b/cx.html
@@ -1740,10 +1740,10 @@ function main() {
     title="benchmark(benchmarkName: string; code: typed)"><wbr />benchmark<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#withFile.t,untyped,untyped,untyped,untyped"
     title="withFile(f, fn, mode, actions: untyped): untyped"><wbr />with<wbr />File<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#zipWith.t,untyped,openArray[T1],openArray[T2]"
-    title="zipWith[T1; T2](f: untyped; xs: openArray[T1]; ys: openArray[T2]): untyped"><wbr />zip<wbr />With<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#currentFile.t,"
     title="currentFile(): string"><wbr />current<wbr />File<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#zipWith.t,untyped,openArray[T1],openArray[T2]"
+    title="zipWith[T1; T2](f: untyped; xs: openArray[T1]; ys: openArray[T2]): untyped"><wbr />zip<wbr />With<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#infoProc.t,untyped"
     title="infoProc(code: untyped)"><wbr />info<wbr />Proc<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#checkLocals.t,"
@@ -1852,7 +1852,7 @@ Version     : 0.9.9
 
 ProjectStart: 2015-06-20
 
-Latest      : 2017-11-10
+Latest      : 2017-11-22
 
 Compiler    : Nim &gt;= 0.17.x dev branch
 
@@ -3435,8 +3435,8 @@ forward declaration
 <dt id="dprint"><a name="dprint,T"></a><pre><span class="Keyword">proc</span> <span class="Identifier">dprint</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>dprint</p>
-<p>show contents of s in repr mode</p>
-<p>usefull for debugging </p>
+<p>debug print  show contents of s in repr mode</p>
+<p>usefull for debugging  (for some reason the  line number maybe off sometimes) </p>
 
 
 </dd>
@@ -4189,19 +4189,19 @@ latest terminalheight always available in th
                 <span class="Keyword">break</span> </pre>
 
 </dd>
+<dt id="currentFile"><a name="currentFile.t,"></a><pre><span class="Keyword">template</span> <span class="Identifier">currentFile</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
+<dd>
+<p>currentFile</p>
+<p>returns path and current filename </p>
+
+
+</dd>
 <dt id="zipWith"><a name="zipWith.t,untyped,openArray[T1],openArray[T2]"></a><pre><span class="Keyword">template</span> <span class="Identifier">zipWith</span><span class="Other">[</span><span class="Identifier">T1</span><span class="Other">;</span> <span class="Identifier">T2</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">f</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">;</span> <span class="Identifier">xs</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">T1</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">ys</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">T2</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
 <dd>
 zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identifier">s1</span> <span class="Operator">=</span> <span class="Identifier">createSeqInt</span><span class="Punctuation">(</span><span class="DecNumber">5</span><span class="Punctuation">)</span>
 <span class="Keyword">var</span> <span class="Identifier">s2</span> <span class="Operator">=</span> <span class="Identifier">createSeqInt</span><span class="Punctuation">(</span><span class="DecNumber">5</span><span class="Punctuation">)</span>
 <span class="Keyword">var</span> <span class="Identifier">zs</span> <span class="Operator">=</span> <span class="Identifier">zipWith</span><span class="Punctuation">(</span><span class="Punctuation">`</span><span class="Operator">/</span><span class="Punctuation">`</span><span class="Punctuation">,</span><span class="Identifier">s1</span><span class="Punctuation">,</span><span class="Identifier">s2</span><span class="Punctuation">)</span>   <span class="Comment"># try with +,-,*,/,div...</span>
 <span class="Identifier">echo</span> <span class="Identifier">zs</span></pre><p>original code ex Nim Forum </p>
-
-
-</dd>
-<dt id="currentFile"><a name="currentFile.t,"></a><pre><span class="Keyword">template</span> <span class="Identifier">currentFile</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
-<dd>
-<p>currentFile</p>
-<p>returns path and current filename </p>
 
 
 </dd>
@@ -4450,7 +4450,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-11-13 08:37:53 UTC</small>
+        <small>Made with Nim. Generated: 2017-11-22 21:45:45 UTC</small>
       </div>
     </div>
   </div>
