--- a/cxutils.html
+++ b/cxutils.html
@@ -1353,8 +1353,8 @@ function main() {
     title="newHiragana(minwl: int = 3; maxwl: int = 10): string"><wbr />new<wbr />Hiragana<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#newKatakana,int,int"
     title="newKatakana(minwl: int = 3; maxwl: int = 10): string"><wbr />new<wbr />Katakana<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#getWanIp2,"
-    title="getWanIp2(): string"><wbr />get<wbr />Wan<wbr />Ip2<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#getWanIp,"
+    title="getWanIp(): string"><wbr />get<wbr />Wan<wbr />Ip<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#showWanIp,"
     title="showWanIp()"><wbr />show<wbr />Wan<wbr />Ip<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#printBigNumber,,string,string,int,bool"
@@ -1795,12 +1795,10 @@ showCpuCores
 
 
 </dd>
-<dt id="getWanIp2"><a name="getWanIp2,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getWanIp2</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">OSError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
-                        <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ExecIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dt id="getWanIp"><a name="getWanIp,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getWanIp</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">OSError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
+                       <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ExecIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
-<p>getWanIp2</p>
-<p>another get wan ip function calling dyndns</p>
-<pre class="listing"><span class="Identifier">printLnBiCol</span><span class="Punctuation">(</span><span class="Identifier">getwanip2</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre><p>Note : very slow so only use if getWanIp does not work , needs curl and awk</p>
+getWanIp<pre class="listing"><span class="Identifier">printLnBiCol</span><span class="Punctuation">(</span><span class="Identifier">getwanip2</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre><p>Note : very slow  needs curl and awk</p>
 
 
 </dd>
@@ -1919,7 +1917,7 @@ showCpuCores
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-12-02 12:23:46 UTC</small>
+        <small>Made with Nim. Generated: 2017-12-10 10:58:03 UTC</small>
       </div>
     </div>
   </div>
